T1Docs Menu for T1Envios

--- a/src/styles/components/_doc-root.scss
+++ b/src/styles/components/_doc-root.scss
@@ -4,7 +4,7 @@
     max-width: initial;
 
     > .container {
-      max-width: initial;
+      // max-width: initial;
 
       > .row {
         flex-wrap: nowrap;
