--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -8,7 +8,7 @@
 @use './components/admonition';
 @use './components/back-to-top-button';
 @use './components/code';
-// @use './components/doc-item';
+@use './components/doc-item';
 @use './components/doc-root';
 @use './components/doc-sidebar';
 @use './components/edit-this-page';
