--- a/src/styles/components/_theme-toggle.scss
+++ b/src/styles/components/_theme-toggle.scss
@@ -1,10 +1,10 @@
 [class^='toggle_'] {
-  position: relative;
+  // position: relative;
   padding: 0;
 
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
 
   [class^='toggleTrack'] {
     display: none;
@@ -12,7 +12,7 @@
 
   input[type='checkbox'] {
     display: block;
-    position: relative;
+    // position: relative;
     height: 1.25rem;
     width: 1.25rem;
     clip: unset;
@@ -24,8 +24,8 @@
     position: absolute;
     z-index: 1;
     pointer-events: none;
-    top: 0;
-    left: 0;
+    // top: 0;
+    // left: 0;
     width: 100%;
     height: 100%;
 
