--- a/src/styles/components/_code.scss
+++ b/src/styles/components/_code.scss
@@ -12,10 +12,13 @@
 
 html[data-theme='light'] {
   --code-block-bg-c: #13171c;
+  --code-line-bg-c: inherit;
 }
 
 html[data-theme='dark'] {
   --code-block-bg-c: #13171c;
+  --code-line-bg-c: inherit;
+
 }
 
 :not(pre) > code {
@@ -24,7 +27,8 @@ html[data-theme='dark'] {
   background-color: inherit;
   vertical-align: baseline;
 
-  background-color: var(--code-block-bg-c);
+  background-color: var(--code-line-bg-c);
+  // color: #00a67d;
   padding-block-start: 0.25rem;
   padding-block-end: 0.25rem;
 
@@ -58,6 +62,25 @@ code {
   background: var(--code-block-bg-c) !important;
 }
 
+.openapi-explorer__request-btn {
+  // background-color: 
+  // background: #c5c5d2 !important;
+  background-color: inherit !important;
+  border: 1px solid #c5c5d2 !important;
+  color: inherit !important;
+}
+
+// .openapi-explorer__playground-editor {
+//   background-color: inherit !important;
+// }
+
+.openapi-explorer__response-container {
+  // background: var(--code-block-bg-c) !important;
+  div {
+    background: inherit !important;
+  }
+}
+
 // Overrides
 #__docusaurus {
   [class*='codeBlockContainer_'] {
@@ -73,7 +96,7 @@ code {
 
 code[class*='language-'],
 pre[class*='language-'] {
-  background: var(--code-block-bg-c);
+  background: var(--code-block-bg-c) !important;
   white-space: pre;
   word-spacing: normal;
   word-break: normal;
@@ -107,6 +130,8 @@ pre[class*='language-'] {
   border: 0.13em solid hsl(30, 20%, 40%);
   box-shadow: 1px 1px 0.3em -0.1em black inset;
   white-space: normal;
+  // background-color: #8c9296 !important;
+  // color: #FFFFFF;
 }
 
 /* Tomorrow Comment */
